# whatsapp-voice-agent-pipecat

./: CONTRIBUTING.md  Dockerfile  LICENSE  README.md  bot.py  pcc-deploy.toml  pyproject.toml
.github/workflows/: docker-build-push.yml
